focus en todas las cards

--- a/objetivo-1.html
+++ b/objetivo-1.html
@@ -27,35 +27,44 @@
         <main>
             <div class='container'>
 
-                <div class="card">
-                    <img alt="" src="img/auto.svg">
-                    <p>Vehículo</p>
-                </div>
+                <a href=#>
+                    <div class="card">
+                        <img alt="" src="img/auto.svg">
+                        <p>Vehículo</p>
+                    </div>
+                </a>
+                <a href=#>
+                    <div class="card">
+                        <img alt="" src="img/emprender.svg">
+                        <p>Emprender</p>
+                    </div>
+                </a>
+                <a href=#>
+                    <div class="card">
+                        <img alt="" src="img/construir.svg">
+                        <p>Construír/Remodelar</p>
+                    </div>
+                </a>
 
-                <div class="card">
-                    <img alt="" src="img/emprender.svg">
-                    <p>Emprender</p>
-                </div>
+                <a href="objetivo-1b.html">
+                    <div class="card">
+                        <img alt="" src="img/viajar.svg">
+                        <p>Viajar</p>
+                    </div>
+                </a>
+                <a href=#>
+                    <div class="card">
+                        <img alt="" src="img/estudiar.svg">
+                        <p>Estudiar</p>
+                    </div>
+                </a>
 
-                <div class="card">
-                    <img alt="" src="img/construir.svg">
-                    <p>Construír/Remodelar</p>
-                </div>
-
-                <a href="objetivo-1b.html"><div class="card">
-                    <img alt="" src="img/viajar.svg">
-                    <p>Viajar</p>
-                </div></a>
-
-                <div class="card">
-                    <img alt="" src="img/estudiar.svg">
-                    <p>Estudiar</p>
-                </div>
-
-                <div class="card">
-                    <img alt="" src="img/dispositivo.svg">
-                    <p>Dispositivo</p>
-                </div>
+                <a href=#>
+                    <div class="card">
+                        <img alt="" src="img/dispositivo.svg">
+                        <p>Dispositivo</p>
+                    </div>
+                </a>
 
             </div>
         </main>
@@ -64,7 +73,7 @@
 </body>
 
 <script type="text/javascript">
-        
+
 </script>
 
 </html>
