--- a/objetivoB2.html
+++ b/objetivoB2.html
@@ -21,12 +21,12 @@
         <div class="top">
             <div><a href="objetivoB1.html"><img alt="Volver" src="img/back.svg"></a></div>
             <div><img alt="Paso 2 de 5" src="img/progress_2.png"></div>
-            <h1>Definamos tu objetivo</h1>
+            <h1>Contanos si tenés ahorros</h1>
         </div>
 
         <main>
             <div class='dinero'>
-                <p>¿Con cuánto dinero contas para la casa?</p>
+                <p>¿Con cuánto dinero contás para remodelar?</p>
                 <input type="number" id="tentacles" name="tentacles" min="10" max="100" placeholder="$00.0">
             </div>
         </main>
