--- a/objetivoB3.html
+++ b/objetivoB3.html
@@ -21,12 +21,12 @@
         <div class="top">
             <div><a href="objetivoB2.html"><img alt="Volver" src="img/back.svg"></a></div>
             <div><img alt="Paso 3 de 5" src="img/progress_3.png"></div>
-            <h1>Definamos tu objetivo</h1>
+            <h1>Indicanos cuánto sale</h1>
         </div>
 
         <main>
             <div class='dinero'>
-                <p>¿Cuál es el costo pensado para la casa?</p>
+                <p>Indica el costo de la remodelación</p>
                 <input type="number" id="tentacles" name="tentacles" min="10" max="100" placeholder="$00.0">
             </div>
         </main>
