--- a/objetivoB4.html
+++ b/objetivoB4.html
@@ -21,13 +21,13 @@
         <div class="top">
             <div><a href="objetivoB3.html"><img alt="Volver" src="img/back.svg"></a></div>
             <div><img alt="Paso 4 de 5" src="img/progress_4.png"></div>
-            <h1>Definamos tu objetivo</h1>
+            <h1>Definamos el cuándo</h1>
         </div>
 
         <main>
             <div class='dinero'>
                 <p>¡Perfecto!<br> 
-                Indicanos por favor cuándo necesitas que pase.</p>
+                Ingresá la fecha estimada para la remodelación.</p>
                 <input type="date" id="fecha" name="fecha">
             </div>
         </main>
