--- a/objetivo-1b.html
+++ b/objetivo-1b.html
@@ -48,7 +48,7 @@
                 </a>
 
                 <a href=#>
-                    <div class="card">
+                    <div class="card hover-option">
                         <img alt="" src="img/viajar.svg">
                         <p>Viajar</p>
                     </div>
