--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
         <header>
             <div>
-                <div class="noti"><img alt="Notificaciones" src="img/notif.svg"></div>
+                <div class="noti"><img alt="" src="img/notif.svg"></div>
                 <div id="Name">
                     <h1>Hola, Nahuel <img alt="" src="img/smile.svg"></h1>
                 </div>
