--- a/objetivo-5.html
+++ b/objetivo-5.html
@@ -25,7 +25,7 @@
 
         <main>
             <div id="final">
-                <img src="img/ilustracion.svg">
+                <img src="img/ilustracion.svg" alt="">
                 <h1>¡Listo! El objetivo Viaje ha sido agregado</h1>
                 <img alt="" src="img/check.svg">
             </div>
